rough concept of leverage sizing implementation
